Fix CSS for readability

--- a/styles.css
+++ b/styles.css
@@ -189,7 +189,9 @@ section {
     flex-direction: column; /* Organiza os itens em uma coluna */
     /* gap: 1em;  Espaço entre os blocos dentro da seção */
 }
-
+section:hover{
+    background-color: rgb(0, 0, 0, 1);
+}
 section p {
     font-size: 18px; /* Tamanho da fonte dos parágrafos dentro da seção */
     margin: 15px 0; /* Margem superior e inferior de 15px */
